--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "loggly-console",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "Loggly wrapper for console.log",
   "keywords": [],
   "author": "Raynos <raynos2@gmail.com>",
@@ -10,6 +10,9 @@
   "contributors": [
     {
       "name": "Jake Verbaten"
+    },
+    {
+      "name": "Agilio"
     }
   ],
   "bugs": {
@@ -17,7 +20,8 @@
     "email": "raynos2@gmail.com"
   },
   "dependencies": {
-    "loggly": "~0.3.11"
+    "loggly": "~0.3.11",
+    "callsite": "~0.0.1"
   },
   "devDependencies": {},
   "licenses": [
